--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
-body{
-  font-family: 'Montserrat', sans-serif;
+h1{
+  font-family: 'Montserrat-Black', sans-serif;
+  font-size: 3rem;
+  line-height: 1.5;
 }
+
 #title{
   background-color: #ff4c68;
 }
