--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ h1{
   font-family: 'Montserrat-Black', sans-serif;
   font-size: 3rem;
   line-height: 1.5;
+  font-weight: 900;
+  color:white;
 }
 
 .container-fluid{
