--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,23 @@ h1{
   width: 60%;
   transform: rotate(25deg);
 }
+
+#features{
+  text-align: center;
+  padding: 3% 15%;
+}
+
+#features i {
+  color: #ef8172;
+  font-size: 2.5rem;
+}
+#features i:hover{
+  color:#ff4c68;
+}
+#features h3{
+  font-family: "Montserrat-Bold";
+  font-size: 2.5rem;
+}
+#features p{
+  color:#8f8f8f;
+}
