--- a/css/styles.css
+++ b/css/styles.css
@@ -43,14 +43,15 @@ h1{
   transform: rotate(25deg);
 }
 
+/* Features Section */
 #features{
   text-align: center;
-  padding: 3% 15%;
+  padding: 7% 15%;
 }
 
 #features i {
   color: #ef8172;
-  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
 #features i:hover{
   color:#ff4c68;
