--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ h2{
   color:#8f8f8f;
 }
 
-/* Testimonials */
+/* Testimonials Section */
 
 #testimonials{
   text-align: center;
@@ -92,5 +92,20 @@ h2{
 
 .carousel-item{
   padding: 7% 15%;
-  
+
+}
+.card-container{
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing{
+  padding: 100px;
+  text-align: center;
+}
+.pricing-column{
+  padding: 3% 2%;
+}
+.card-body{
+  height: 290px;
 }
