--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h2{
   line-height: 1.5;
 }
 .container-fluid{
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 #title{
@@ -43,14 +43,18 @@ h2{
 /* Title Image */
 
 .title-image{
-  width: 60%;
+  width: 20%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 24%;
 }
 
 /* Features Section */
 #features{
   text-align: center;
   padding: 7% 15%;
+  background-color: white;
+  position: relative;
 }
 
 #features i {
@@ -108,4 +112,28 @@ h2{
 }
 .card, .card-header{
   border-color: #ff8a8a;
+}
+
+@media (max-width:1028px){
+  #title{
+    text-align: center;
+  }
+  .title-image{
+    position: static;
+    transform: rotate(0);
+  }
+}
+#cta{
+  font-family: "Montserrat-Black";
+  background-color: #ff4c68;
+  padding: 7% 0 3%;
+  color: white;
+}
+#cta h3{
+  font-size: 2.5rem;
+}
+
+#footer{
+  padding: 7% 0 3%;
+  background-color: white;
 }
