--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ h2{
 /* Pricing Section */
 #pricing{
   padding: 100px;
+  padding-bottom: 0;
   text-align: center;
 }
 .pricing-column{
@@ -134,6 +135,9 @@ h2{
 }
 
 #footer{
-  padding: 7% 0 3%;
+  padding: 7% 0 0;
   background-color: white;
+}
+#footer i{
+  padding: 2%  1.5%;
 }
