--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,9 @@
-h1{
-  font-family: 'Montserrat-Black', sans-serif;
+h1, h2, h3, h4, h5, h6{
+  font-family: "Montserrat-Bold";
   font-size: 3.5rem;
   line-height: 1.5;
 }
-h2{
-  font-family: "Montserrat-Bold";
-  font-size: 3rem;
-  line-height: 1.5;
-}
+
 .container-fluid{
   padding: 3% 15% 7%;
 }
@@ -38,6 +34,13 @@ h2{
 
 .download-button{
   margin: 5% 3% 5% 0;
+}
+
+/* Headings */
+.big-heading{
+  font-family: 'Montserrat-Black', sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
 /* Title Image */
