--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,16 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #title{
-  background-color: #ff4c68;
   color: white;
   text-align: left;
+}
+
+/* SECTIONS */
+.colored-section{
+  background-color: #ff4c68;
+}
+.white-section{
+  background-color: white;
 }
 
 /* Navigation Bar */
@@ -63,7 +70,6 @@ h1, h2, h3, h4, h5, h6{
 /* Features Section */
 #features{
   padding: 7% 15%;
-  background-color: white;
   position: relative;
 }
 
@@ -148,7 +154,6 @@ line-height: 1.5;
 /* CTA SECTION */
 #cta{
   font-family: "Montserrat-Black";
-  background-color: #ff4c68;
   padding: 5% 100px 2%;
   color: white;
 }
@@ -159,7 +164,6 @@ line-height: 1.5;
 
 #footer{
   padding: 3% 0 0;
-  background-color: white;
 }
 #footer i{
   padding: 2%  1.5%;
